Last version of data_analysis

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -220,7 +220,7 @@
    "execution_count": 16,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
